# Year2Project

./: README.md
.github/ISSUE_TEMPLATE/: internal-server-error.md
HRConsole/: brief BLE notes.docx
HRConsole/HRConsole/: HRConsole.csproj  HRConsole.sln  Program.cs
Meeting Outlines/: Meeting 3.md  Meeting Notes #2.md  Meeting Notes #3.md  Meeting Notes 2.md  Meetings Notes #1.md
Reports/: README.md  custom.cls  references.bib
Reports/Papers/: Discussion and Improvements.md
Reports/Requirement Specification/: Client Meeting.md  Requirement Specification.tex  macros.tex
Server/: .env  .gitignore  Cargo.toml  New changes.md  README.md  build.rs  config.toml  rustfmt.toml  server_docs.md
Server/.cargo/: config.toml
Server/Docs/: Server docs.tex
Server/data/: user_uids.csv
Server/data/000/: 000.xml  001.xml  info.xml
Server/data/dtds/: session.dtd  user.dtd
Server/front/: 404.html  account_terms.html  dash.html  dash.js  dash.min.js  index.html  login.html  login.js  login.min.js  register.html  register.js  register.min.js
Server/sql/: clean.sql  new_session.sql  submit_session.sql  submit_session_check.sql  tables.sql  user_check.sql  user_login.sql
Server/sql/admin/: auth_key.sql  download.sql  login.sql  new_admin.sql  new_key.sql  no_conflict.sql
Server/sql/api/: close.sql  new_user.sql  submit_session.sql
Server/src/: api.rs  cleaner.rs  conf.rs  config.rs  db.rs  lib.rs  logger.rs  main.rs
Server/src/api/: db.rs  impls.rs  login.rs  mod.rs  new_user.rs  paths.rs  prelude.rs  submit_session.rs
Server/src/api/tests/: login.rs  mod.rs  new_user.rs  session.rs
Server/src/front/: cleaner.rs  dash.rs  login.rs  mod.rs  prelude.rs  register.rs  statics.rs
Unity/Assets/: CubeController.cs  CubeSpawner.cs  DataStorage.cs  HeartRateSensor.cs  Myndplay.cs  Request.cs  Rot.cs  (+1 more)
(+35 files in other folders)
