[package]
name = "Server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0"

[dev-dependencies]
json = "0.12.4"

[build-dependencies]
toml = "0.5.9"
serde = { version = "1.0.148", features = ["derive"] }
