[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-utils = "3"
futures-util = "0.3.26"
chrono = "0.4.23"
serde = { version = "1.0.152", features = ["derive"] }
dotenv = "0.15.0"
config = "0.13.1"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"

[dev-dependencies]
json = "0.12.4"
