[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Rosie Bartlett <lvff38@durham.ac.uk>"]

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
futures-util = "0.3.26"
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
dotenv = "0.15.0"
config = "0.13.1"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4", "with-geo-types-0_7"] }
geo-types = { version = "0.7.8", features = ["serde"] }
json = "0.12.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1"

[build]
[target.armv7-unknown-linux-gnueabihf]
linker = "arm-none-linux-gnueabihf-gcc"
